k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    name: portfolio
    app: portfolio
    environment: production
